			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.swi.psy.uva.nl/bugzilla/
					--------------------------------------

VERSION 5.2.0 (May 22, 2003)
============================

  * FIXED: Bug #56: various issues with 0-bytes in format/3 and friends.
    Mike Elston.

  * PORT: Semaphore handling needed by the multi-threading version to
    MacOS X (Darwin).

  * FIXED: Bug #55: random/1 generating same sequence in all threads on Win32.
    Mike Elston.  There are still many issues left about random numbers in
    multi-threaded code.  See comments in pl-os.c

  * FIXED: Bug #54: preserve the tracer being disabled in nested
    C->Prolog calls.  Tolga Konik.
    
  * ADDED: portray_clause/2 (compatibility and consistency).

  * FIXED: Bug #52: write/1 to write SWI-Prolog string objects with
    embedded 0 chacters.  Mike Elston.

  * FIXED/MODIFIED: library(url), parse_url_search(-Spec, +Fields), packing
    a search specification.

  * ADDED: 'F' (fail) option to graphical debugger (Feature #51, Holger
    Kanwischer).

  * FIXED: Bug #50: Handle \c<blank*> with character escapes.  Mike Elston.

VERSION 5.1.13 (May 19, 2003)
=============================

  * ADDED/PORT: New Windows installer based on NSIS, NullSoft Scriptable
    Install System.  Also added a dedicated windows readme file to the
    installation.

  * FIXED: handling uninitialised data in compilation of \+/1.  Could
    result in wrong results if the garbage collector is executed in the
    critical window or the graphical tracer it used.  Alan Baljeu.

  * FIXED: qsave_program/[1,2] to save the thread_local attribute.
    Mike Elston.

  * FIXED: Handling of 0'\n and friends if character-escapes is enabled
    (default).  Richard O'Keefe.  Note:

    MODIFIED: as a consequence, 0'\ is not interpreted as the character